// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Telephone component The Rendered HTML should have a label 1`] = `
<div
  class="form-row_container"
>
  <label
    for="id-1-1"
  >
    My Telephone Label
  </label>
  <input
    id="id-1-1"
    type="tel"
    value=""
  />
</div>
`;

exports[`Telephone component handling input should set a value when passed in 1`] = `
<div
  class="form-row_container"
>
  <label
    for="id-2-1"
  >
    My Label
  </label>
  <input
    id="id-2-1"
    type="tel"
    value="0800121212"
  />
</div>
`;
